New search function (findExpression)

--- a/src/makefile
+++ b/src/makefile
@@ -1,17 +1,17 @@
-simgrep: main.o	boyer_moore.o fileHandling.o inputHandling.o grep.o
-	gcc -Wall -Wextra main.o boyer_moore.o fileHandling.o inputHandling.o grep.o -o simgrep
+simgrep: main.o	fileHandling.o inputHandling.o grep.o lineHandling.o
+	gcc -Wall -Wextra main.o fileHandling.o inputHandling.o grep.o lineHandling.o -o simgrep
 
-main.o:	main.c	boyer_moore.h inputHandling.h fileHandling.h grep.h
+main.o:	main.c	inputHandling.h fileHandling.h grep.h
 	gcc -Wall -Wextra -c main.c
 
-boyer_moore.o:	boyer_moore.c
-	gcc -Wall -Wextra -c boyer_moore.c
-
-fileHandling.o: fileHandling.c
+fileHandling.o: fileHandling.c	fileHandling.h	lineHandling.h
 	gcc -Wall -Wextra -c fileHandling.c
 
-inputHandling.o: inputHandling.c
+inputHandling.o: inputHandling.c	inputHandling.h
 	gcc -Wall -Wextra -c inputHandling.c
 
-grep.o: grep.c
+grep.o: grep.c	grep.h
 	gcc -Wall -Wextra -c grep.c
+
+lineHandling.o:	lineHandling.c	lineHandling.h
+	gcc -Wall -Wextra -c lineHandling.c
